change widths to ensure twosided multiselect is well aligned (closes #194)

--- a/src/main/webapp/styles/standard.css
+++ b/src/main/webapp/styles/standard.css
@@ -22,13 +22,13 @@ body {
 
 #wrapper {
     /* width:800px; */
-	min-width: 800px;
+	min-width: 1000px;
 	/* max-width: 800px; */
 	margin-right: auto;
 	margin-left: auto;
 
 	/* fix max-width incompatibility in IE6/IE7 */
-	width:expression(document.body.clientWidth < 800? "800px": "auto" );
+	width:expression(document.body.clientWidth < 1000? "1000px": "auto" );
 	
 	overflow:hidden;
 	display:block;
@@ -408,8 +408,8 @@ fieldset th {
 }
 
 .dijitTextBox, .dijitComboBox, .dijitSpinner, .dijitTextArea {
-    width: 300px  !important;
-    max-width: 300px !important;
+    width: 270px  !important;
+    max-width: 270px !important;
     padding: 0px !important;
 }
 
@@ -513,7 +513,7 @@ pre {
 }
 
 .tsmsselect {
-    width: 300px;
+    width: 270px;
     float: left;
 }
 
@@ -522,7 +522,7 @@ pre {
 }
 
 .tsmsoptions {
-    width: 50px;
+    width: 25px;
     float: left;
 }
 
